--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -31,6 +31,7 @@
           <% end %>
           </tbody>
         </table>
+        <%= page_links(:prev => "&#171; #{t('previous')}", :next => "#{t('next')} &#187;") if @search.page_count > 1 %>
       </div>
     </td>
     <td valign="top">
@@ -108,4 +109,3 @@
     </td>
   </tr>
 </table>
-<%= render :partial => 'shared/paginate', :locals => {:collection => @orders, :options => generate_search_options(@filter)} unless @orders.empty? -%>
