--- a/app/views/admin/taxons/_taxon_table.html.erb
+++ b/app/views/admin/taxons/_taxon_table.html.erb
@@ -1,30 +1,30 @@
-<table class="basic-table">
+<table class="index">
   <thead>
   	<tr>
   		<th><%= t("name") %></th>
-  		<th><%= t("site") %></th>
   		<th><%= t("path") %></th>
-  		<th><%= t("action") %></th>
+  		<th><%= t("site") %></th>
+  		<th></th>
   	</tr>
   </thead>
   <tbody>
     <% taxons.each do |taxon| %>
       <tr id="<%= dom_id(taxon, :sel)%>">
-        <td valign="top"><%= taxon.name %></td>
+        <td><%= taxon.name %></td>
+        <td><%= taxon_path taxon %></td>
         <td valign="top"><%= taxon.taxonomy.site.name %></td>
-        <td valign="top"><%= taxon_path taxon %></td>
-  	    <td valign="top">
-		      <%= link_to_remote t('remove'), 
-		                         :url => remove_admin_product_taxon_url(@product, taxon),
-		                         :loading => "Element.show(#{dom_id(taxon, :rem_spinner)})",
-		                         :update => 'selected-taxons',
-		                         :complete => "$('#{dom_id(taxon, :sel)}').remove(); Element.hide(#{dom_id(taxon, :rem_spinner)});" %>
+  	    <td class="actions">
           <%= image_tag "spinner.gif", :style => "display:none", :id => "#{dom_id(taxon, :rem_spinner)}" %>		                         
+		      <%= link_to_remote icon('delete') + ' ' + t('remove'), 
+		                         {:url => remove_admin_product_taxon_url(@product, taxon),
+		                         :loading => "jQuery('##{dom_id(taxon, :rem_spinner)}').show()",
+		                         :update => 'selected-taxons',
+		                         :complete => "jQuery('##{dom_id(taxon, :sel)}').remove(); jQuery('##{dom_id(taxon, :rem_spinner)}').hide();"}, :class => 'iconlink' %>
   	    </td>        
       </tr>
     <% end %>
     <% if taxons.empty? %>
-     <tr><td colspan="3"><%= t("None") %>.</td></tr>
+     <tr><td colspan="3"><%= t('none') %>.</td></tr>
     <% end %>
   </tbody>
 </table>
